<!--

    Copyright 2022 Adobe. All rights reserved.
    This file is licensed to you under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License. You may obtain a copy
    of the License at http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software distributed under
    the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
    OF ANY KIND, either express or implied. See the License for the specific language
    governing permissions and limitations under the License.

-->
<resources>
    <string name="app_name">AnalyticsTestApp</string>
    <string name="btn_text_back_to_apis">Back To APIs</string>
    <string name="btn_text_persist_vid">Persist as Vid</string>
    <string name="btn_text_persist_aid">Persist as AID</string>
    <string name="btn_text_update_config">Update</string>
    <string name="et_hint_server">server URL</string>
    <string name="et_hint_persist_id">Persist Identifier</string>
    <string name="tv_update_config">Update Config</string>
    <string name="et_hint_assurance_url">Enter Assurance URL</string>
    <string name="btn_connect_assurance">Connect</string>
</resources>
